	PR middle-end/40669 	* tree-tailcall.c (adjust_return_value_with_ops, 	create_tailcall_accumulator): Set DECL_GIMPLE_REG_P on the temporary 	if it has complex or vector type.

* gcc.dg/pr40669.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149319 138bc75d-0d04-0410-961f-82ee72b054a4